--- a/src/render/index.ejs
+++ b/src/render/index.ejs
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <!--template for 2020年05月07日-->
 <!--<%= new Date().getFullYear()+'/'+(new Date().getMonth()+1)+'/'+new Date().getDate()+' '+new Date().getHours()+':'+new Date().getMinutes() %>--><head>
+<% const favicon = require('../main/favicon/favicon.ico') %>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
@@ -9,6 +10,7 @@
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store, must-revalidate">
     <meta HTTP-EQUIV="expires" CONTENT="Wed, 26 Feb 1997 08:21:57 GMT">
     <meta HTTP-EQUIV="expires" CONTENT="0">
+    <link rel="shortcut icon" href="<%= favicon %>" />
 </head>
 <body>
     <div id="app"></div>
