feat:引入view-design。自定义主题。

--- a/src/render/index.ejs
+++ b/src/render/index.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<!--template for 2020年05月07日-->
-<!--<%= new Date().getFullYear()+'/'+(new Date().getMonth()+1)+'/'+new Date().getDate()+' '+new Date().getHours()+':'+new Date().getMinutes() %>--><head>
+<head>
 <% const favicon = require('../main/favicon/favicon.ico') %>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
