--- a/src/render/electron.ejs
+++ b/src/render/electron.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<!--template for 2020年05月07日-->
-<!--<%= new Date().getFullYear()+'/'+(new Date().getMonth()+1)+'/'+new Date().getDate()+' '+new Date().getHours()+':'+new Date().getMinutes() %>--><head>
+<head>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
