feat:设置主题色，规整目录。

--- a/src/render/libs/css/theme.less
+++ b/src/render/libs/css/theme.less
@@ -1,4 +1,26 @@
-@import '~view-design/src/styles/index.less';
-@primary-color: #8c0776;
+@themeColor: #722ed1;
+@themeFontColor: #ffffff;
+@themeHoverColor: shade(@themeColor, 15%);
 
-@themeColor: #8c0776;
+//成功主题色
+@successThemeColor: #2ed150;
+@successThemeFontColor: #ffffff;
+@successThemeHoverColor: shade(@successThemeColor, 15%);
+
+//警告主题色
+@warningThemeColor: #f8ec07;
+@warningThemeFontColor: #ffffff;
+@warningThemeHoverColor: shade(@warningThemeColor, 15%); 
+
+//错误主题色
+@errorThemeColor: #ee0e12;
+@errorThemeFontColor: #ffffff;
+@errorThemeHoverColor: shade(@errorThemeColor, 15%);
+
+//信息主题色
+@infoThemeColor: #90949a;
+@infoThemeFontColor: #ffffff;
+@infoThemeHoverColor: shade(@infoThemeColor, 15%);
+
+@fontColor: #120338;
+@borderColor: #dcdcdc;
