feat:增加框架介绍页。

--- a/src/render/libs/css/reset.less
+++ b/src/render/libs/css/reset.less
@@ -23,5 +23,5 @@ table{table-layout: fixed; word-break: break-all; word-wrap:break-word;}
 /*滚动条样式*/
 div::-webkit-scrollbar-track{width: 5px; height: 5px; border-radius: 2.5px; background-color: #E9F4FA;}
 div::-webkit-scrollbar{width: 5px; height: 5px; background-color: #E9F4FA;}
-div::-webkit-scrollbar-thumb{width: 5px; height: 5px; border-radius: 2.5px; background-color: #7EA4FF;}
+div::-webkit-scrollbar-thumb{width: 5px; height: 5px; border-radius: 2.5px; background-color: #efdbff;}
 table tr th{white-space: nowrap;}
